tasky-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tasky-ingress
  namespace: default
  labels:
    app: tasky
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tasky-service
                port:
                  number: 80
